Announcementwrappper fix tidslinje

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -266,7 +266,7 @@ p {
 /*Change styling on mobile  */
 @media only screen and (max-width: 900px) {
   .announcementwrapper {
-    margin-top: 3.5rem;
+    margin-top: 3.6rem;
     border-top: 0.5px solid #CCB380;
     border-bottom: 0.5px solid #CCB380;
     background-color: #1E1D20;
